fixed desktop css, finished mobile css

--- a/index.html
+++ b/index.html
@@ -25,28 +25,34 @@
         <div id="navUnderlay" class="wrapper-nav-underlay">
             <div id="navOpenBtn" class="wrapper-nav-btn">
                 <div  class="nav-btn">
-                    <div class="nav-btn-line nav-btn-line-1" style="background-color: black;"></div>
-                    <div  class="nav-btn-line nav-btn-line-2" style="background-color: black;"></div>
-                    <div  class="nav-btn-line nav-btn-line-3" style="background-color: black;"></div>
-                    <div  class="nav-btn-line nav-btn-line-4" style="background-color: black;"></div>
+                    <div class="nav-btn-line nav-btn-line-1 nav-btn-line-underlay"></div>
+                    <div  class="nav-btn-line nav-btn-line-2 nav-btn-line-underlay" ></div>
+                    <div  class="nav-btn-line nav-btn-line-3 nav-btn-line-underlay" ></div>
+                    <div  class="nav-btn-line nav-btn-line-4 nav-btn-line-underlay" ></div>
                 </div>
             </div>
-            <div class="wrapper-comp-name">
-                <div class="comp-name">
-                    KOLIER<br>KITCHEN
+            <div class="language-btn">
+                EN
+            </div>
+            <div class="wrapper-comp-name wrapper-comp-name-underlay">
+                <div class="comp-name comp-name-underlay">
+                    KOLIER KITCHEN
                 </div>
             </div>
         </div>
         <div id="navbar" class="wrapper-nav hide">
             <div class="wrapper-scroll" data-simplebar>
                 <div class="nav-content">
-                    <div class="wrapper-nav-btn">
+                    <div class="wrapper-nav-btn w-inner-nav-btn">
                         <div id="navCloseBtn"  class="nav-btn">
                             <div class="nav-btn-line nav-btn-line-1"></div>
                             <div  class="nav-btn-line nav-btn-line-2"></div>
                             <div  class="nav-btn-line nav-btn-line-3"></div>
                             <div  class="nav-btn-line nav-btn-line-4"></div>
                         </div>
+                    </div>
+                    <div class="language-btn inner-language-btn nav-indic">
+                        EN
                     </div>
                     <div class="wrapper-comp-name">
                         <div class="comp-name">
@@ -100,7 +106,7 @@
         <div class="wrapper-content">
             <div class="wrapper-scroll" data-simplebar>
                 <div class="content">
-                    <div class="wrapper-img-col">
+                    <div class="wrapper-img-col w-img-col-1">
                         <div class="img-col">
                             <img class="img-item" src="imgs/1.png">
 
@@ -110,14 +116,14 @@
                             <img class="img-item" src="imgs/2.png">
                         </div>
                     </div>
-                    <div class="wrapper-img-col">
+                    <div class="wrapper-img-col w-img-col-2">
                         <div class="img-col">
                             <img class="img-item" src="imgs/4.png">
 
                             <img class="img-item" src="imgs/2.png">
                         </div>
                     </div>
-                    <div class="wrapper-img-col">
+                    <div class="wrapper-img-col w-img-col-3">
                         <div class="img-col">
                             <img class="img-item" src="imgs/2.png">
 
