added auto image loading

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <nav>
                         <ul>
                             <li>
-                                <div class="nav-item nav-indic">
+                                <div id="catCabinet" class="nav-item nav-indic">
                                     CABINETS
                                 </div>
                                 <br>
-                                <div class="nav-item nav-indic">
+                                <div id="catCountertops" class="nav-item nav-indic">
                                     COUNTERTOPS
                                 </div>
                             </li>
@@ -107,31 +107,13 @@
             <div class="wrapper-scroll" data-simplebar>
                 <div class="content">
                     <div class="wrapper-img-col w-img-col-1">
-                        <div class="img-col">
-                            <img class="img-item" src="imgs/1.png">
+                        <div id="imgCol0" class="img-col">
 
-                            <img class="img-item" src="imgs/2.png">
-                            <img class="img-item" src="imgs/4.png">
-
-                            <img class="img-item" src="imgs/2.png">
                         </div>
                     </div>
                     <div class="wrapper-img-col w-img-col-2">
-                        <div class="img-col">
-                            <img class="img-item" src="imgs/4.png">
-
-                            <img class="img-item" src="imgs/2.png">
-                        </div>
-                    </div>
-                    <div class="wrapper-img-col w-img-col-3">
-                        <div class="img-col">
-                            <img class="img-item" src="imgs/2.png">
-
-                            <img class="img-item" src="imgs/1.png">
-                            <img class="img-item" src="imgs/4.png">
-
-                            <img class="img-item" src="imgs/2.png">
-
+                        <div id="imgCol1" class="img-col">
+                            <!--<img class="img-item" src="imgs/cabinets/2.jpg">-->
                         </div>
                     </div>
                 </div>
