fixed mobile css overlapping

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
-    <meta name="author" content="name">
-    <meta name="description" content="description here">
-    <meta name="keywords" content="keywords,here">
+    <title>Kolier Kitchen</title>
+    <meta name="keywords" content="kitchen,cabinet,kolier,kitchen">
     <link rel="stylesheet" href="cssreset.css" type="text/css">
     <link rel="stylesheet" media="only screen and (min-width:551px)" href="style.css" type="text/css">
     <link rel="stylesheet" media="only screen and (max-width:550px)" href="style-mobile.css" type="text/css">
