--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <div class="img-zoom-content">
                 <div class="img-zoom-src-wrapper">
-                    <img id="img-zoom-src" src="imgs/magnified/12.webp" alt="fullscreen view of the selected image">
+                    <img id="img-zoom-src" src="" alt="fullscreen view of the selected image">
                 </div>
             </div>
         </div>
