changed close btn

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <div id="img-zoom-wrapper">
             <div id="img-zoom-close-btn">
-                <button>&#10006;</button>
+                <button>x</button>
             </div>
             <div class="img-zoom-content">
                 <div class="img-zoom-src-wrapper">
