--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <script defer src="script.js"></script>
-    <script src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js"></script>
+    <script defer src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js"></script>
 </head>
 
 <body>
