added google analytics

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196033496-1">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-196033496-1');
+    </script>
 
     <script defer src="script.js"></script>
     <script defer src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js"></script>
@@ -95,7 +105,7 @@
                                 <br>
                                 <div id="catGloss" class="nav-item nav-indic">
                                     <button>
-                                        GLOSS
+                                        HIGH GLOSS
                                     </button>
                                 </div>
                                 <br>
@@ -126,7 +136,7 @@
                                 <div class="nav-sub">
                                     <a href="mailto:kolierkitchen@hotmail.com" target="mailto:kolierkitchen@hotmail.com">kolierkitchen@hotmail.com</a>
                                     <br>
-                                    <a href="tel:416-510-1248">416-510-1248</a> or
+                                    <a href="tel:437-230-3971">437-230-3971</a> or
                                     <br>
                                     <a href="tel:647-526-3566">647-526-3566</a>
                                 </div>
@@ -163,6 +173,12 @@
         <div id="img-zoom-wrapper">
             <div id="img-zoom-close-btn">
                 <button>x</button>
+            </div>
+            <div id="img-zoom-next-btn">
+                <button>&gt;</button>
+            </div>
+            <div id="img-zoom-prev-btn">
+                <button>&lt;</button>
             </div>
             <div class="img-zoom-content">
                 <div class="img-zoom-src-wrapper">
