--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
     <link rel="stylesheet" media="only screen and (max-width:550px)" href="style-mobile.css" type="text/css">
     <link rel="stylesheet" href="https://unpkg.com/simplebar@5.3.0/dist/simplebar.css" />
 
+    <script defer src="script.js"></script>
+    <script defer src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196033496-1">
     </script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'UA-196033496-1');
+        gtag('config', 'UA-196033496-1');
     </script>
-
-    <script defer src="script.js"></script>
-    <script defer src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js"></script>
 </head>
 
 <body>
@@ -134,7 +133,7 @@
                                     CONTACT
                                 </div>
                                 <div class="nav-sub">
-                                    <a href="mailto:kolierkitchen@hotmail.com" target="mailto:kolierkitchen@hotmail.com">kolierkitchen@hotmail.com</a>
+                                    <a href="mailto:kolierkitchen2@hotmail.com" target="mailto:kolierkitchen2@hotmail.com">kolierkitchen2@hotmail.com</a>
                                     <br>
                                     <a href="tel:437-230-3971">437-230-3971</a> or
                                     <br>
