--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Kolier Kitchen</title>
+    <meta name="description" content="Kolier Kitchen provides professionaly designed and manufactured cabinets for your kitchen, closets, washroom, and more.">
     <meta name="keywords" content="kitchen,cabinet,kolier,kitchen">
     <link rel="stylesheet" href="cssreset.css" type="text/css">
     <link rel="stylesheet" media="only screen and (min-width:551px)" href="style.css" type="text/css">
